--- a/themes/KeepIt/assets/css/_common/_core/layout.scss
+++ b/themes/KeepIt/assets/css/_common/_core/layout.scss
@@ -28,9 +28,11 @@
       left: 50%;
       margin-left: -35px;
     }
-    .pic {
-      
-    }
+    .header-logo-mobile {
+      position: relative;
+      top: 10px;
+
+  }
   }
 
   .main {
