--- a/themes/KeepIt/assets/css/_common/_section/navbar.scss
+++ b/themes/KeepIt/assets/css/_common/_section/navbar.scss
@@ -1,14 +1,10 @@
   
 
 
-  .header-logo a{
-    padding: 0 ;
-
-    i{
-      line-height: 2em;
-    }
+  .header-logo {
+    padding: 8px;
+    padding-top: 8px;
   }
-  
   
  .navbar .menu a {
    
@@ -28,3 +24,4 @@
     
     background-color: transparent;
   }
+  
