Mobile menu repaired

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,9 +15,9 @@
 <nav class="navbar-mobile" id="nav-mobile" style="display: none">
      <div class="container">
         <div class="navbar-header">
-            
-            <div> <a href="{{.Site.BaseURL}}" class="header-logo-mobile" ><img src = {{ .Site.Params.pic }} width = 90> </a></div>
-            
+            <div>
+            <a href="{{.Site.BaseURL}}" class="header-logo-mobile" ><img src = {{ .Site.Params.pic }} width=90> </a>
+            </div>
             <div> <a href="javascript:void(0);" class="theme-switch"><i class="iconfont icon-sun"></i></a>
             </div>
             
