--- a/themes/KeepIt/assets/css/_common/_core/media.scss
+++ b/themes/KeepIt/assets/css/_common/_core/media.scss
@@ -96,6 +96,8 @@
 
                 &.active {
                     display: block;
+                    position: relative;
+                    top: -13px;
                 }
 
                 .dark-theme & {
