Making everything more pretty

--- a/themes/KeepIt/assets/css/_variables/default.scss
+++ b/themes/KeepIt/assets/css/_variables/default.scss
@@ -5,16 +5,16 @@ $light-background-color: #fff;
 $light-font-color: #161209;
 $light-font-secondary-color: #a9a9b3;
 
-$light-navbar-active-color: #161209;
+$light-navbar-active-color: #5f5f5f;
 
-$light-global-link-color: #161209;
-$light-global-link-hover-color:#2d96bd;
+$light-global-link-color: #5f5f5f;
+$light-global-link-hover-color:#161208;
 
-$light-post-link-color: #2d96bd;
-$light-post-link-hover-color:#ef3982;
+$light-post-link-color: #5f5f5f;
+$light-post-link-hover-color: #161208;
 
-$light-pagination-link-color : #2d96bd;
-$light-pagination-link-active-color: #000;
+$light-pagination-link-color : #5f5f5f;
+$light-pagination-link-active-color: #161208;
 
 $light-border-color: #dcdcdc;
 
