Updated Privacy and Imprint

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
          {{ end }}
 		  <span>MADE&nbsp;WITH&nbsp;<a href="https://github.com/Fastbyte01/KeepIt" target="_blank" rel="external nofollow noopener noreffer">KeepIt</a>&nbsp;&&nbsp;<a href="https://gohugo.io/" target="_blank" rel="external nofollow noopener noreffer">Hugo&nbsp;|</a></span>
 
-        <span><a href="https://github.com/janbrederecke/Impresssum-Imprint-Datenschutz-Privacy-Statement" target="_blank" rel="external nofollow noopener noreffer">|&nbsp;IMPRESSUM&nbsp;&&nbsp;DATENSCHUTZ&nbsp;/&nbsp;(IMPRINT&nbsp;&&nbsp;DATA&nbsp;POLICY)&nbsp;|</a></span>
+        <span><a href="https://janbrederecke.github.io/impressum" target="_blank" rel="external nofollow noopener noreffer">|&nbsp;IMPRESSUM&nbsp;&&nbsp;DATENSCHUTZ&nbsp;/&nbsp;(IMPRINT&nbsp;&&nbsp;DATA&nbsp;POLICY)&nbsp;|</a></span>
     </div>
 </footer>
 
