--- a/themes/KeepIt/assets/css/_common/_core/layout.scss
+++ b/themes/KeepIt/assets/css/_common/_core/layout.scss
@@ -44,11 +44,11 @@
   }
   
   .footer {
-    height: 4rem;
+    height: 1rem;
     width: 100%;
     text-align: center;
-    line-height: 4rem;
-    padding-top: 6rem;
+    line-height: 2rem;
+    padding-top: 6em;
 
   }
   
