--- a/themes/KeepIt/assets/css/_custom.scss
+++ b/themes/KeepIt/assets/css/_custom.scss
@@ -41,12 +41,14 @@
     font-size: 1.1em;
     font-weight: bold;
     padding: 2px;
+    line-height: 1em;
   }
   
   h3.description {
     font-size: 1em;
     font-weight: bold;
     padding: 2px;
+    line-height: 1.5em;
   }
   
   
@@ -54,6 +56,7 @@
     font-size: 1em;
     font-weight: normal;
     padding: 2px;
+    line-height: 1.5em;
   }
   
   .social-links {
